# deck_builder

./: .gitignore  CMakeLists.txt  DB manager nikke.py  LICENSE  README.md  character_slot_widget.ui  characterslotwidget.cpp  characterslotwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  nikke_info.db  nikke_skill_keyward.txt  updatemanager.cpp  updatemanager.h  updater_main.cpp
